--- a/07_DOM_Projects/Add_Freiend/index.html
+++ b/07_DOM_Projects/Add_Freiend/index.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Color Changing</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+        <div class="box">
+            <h2>White</h2>
+        </div>
+        <div class="buttons">
+        <button id="button1">red</button>
+        <button id="button2">green</button>
+        <button id="button3">yellow</button>
+        <button id="button4">blue</button>
+        <button id="button5">black</button>
+    </div>
+</div>
     
 </body>
+<script src="script.js"></script>
 </html>
