--- a/Dom_Projects/Color_Changer/index.html
+++ b/Dom_Projects/Color_Changer/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <span class="box" id="yellow">
+         <!-- <h1>Yellow</h1> -->
+    </span>
+    <span class="box" id="red">
+         <!-- <h1>Red</h1> -->
+    </span>
+    <span class="box" id="blue">
+        <!-- <h1>Blue</h1> -->
+    </span>
+    <span class="box" id="green">
+    <!-- <h1>Green</h1> -->
+    </span>
 </body>
+<script src="script.js"></script>
 </html>
